overflow fix

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,6 +8,7 @@
    margin: 0;
    font-family: 'Nunito', sans-serif;
    margin: 0;
+   overflow-x: hidden;
  }
  a {
   text-decoration: none;
